package com.ilike.adapter.classadapter;

/**
 * 适配接口
 */
public interface Voltage5V {

     int output5v();
}
