package com.ilike.builder;

public class Client1 {

    public static void main(String[] args) {

        CommonHouse commonHouse = new CommonHouse();
        commonHouse.build();


    }
}
